k8s/aspnet-todo/aspnet-todo-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  annotations:
    prometheus.io/scrape: "true"
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: aspnet-todo-api
        image: ghcr.io/tiagogauziski/todolist-api:main
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 2
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  type: NodePort
