k8s/aspnet-todo/aspnet-todo-ui-mvc.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-mvc-deployment
  annotations:
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-mvc
  template:
    metadata:
      labels:
        app: ui-mvc
    spec:
      containers:
      - name: aspnet-todo-ui-mvc
        image: ghcr.io/tiagogauziski/todolist-ui-mvc:main
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 2
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ui-mvc-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  selector:
    app: ui-mvc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-mvc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /aspnet-todo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ui-mvc-service
            port:
              number: 80
